# cz-sentiment-analysis

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/processed/: test.csv  train.csv  val.csv
data/raw/: labeled_comments.txt  prediction_comments.txt
models/base_electra/: config.json  tokenizer.json  tokenizer_config.json
models/runs/20251113-212550/: config.yaml  training_history.json
models/runs/20251113-224046/: config.yaml  training_history.json
models/runs/20251113-225730/: config.yaml  training_history.json
models/runs/20251113-225730/trained_sentiment_electra/: config.json
models/runs/20251113-232212/: config.yaml  training_history.json
models/runs/20251114-000642/: config.yaml  training_history.json
models/runs/20251114-000642/trained_sentiment_electra/: tokenizer.json  vocab.txt
models/runs/20251114-003524/: config.yaml  training_history.json
models/runs/20251114-003524/trained_sentiment_electra/: tokenizer_config.json
models/runs/20260112-160710/: config.yaml  training_history.json
models/runs/20260112-160710/trained_sentiment_electra/: config.json
notebooks/: 00_training_methodology_walkthrough.ipynb  01_eda_labeled_comments.ipynb  02_eda_prediction.ipynb  03_model_evaluation.ipynb
results/20251113-212550/: classification_report.csv  incorrect_predictions.csv  misclassified_examples.md
results/20251113-224046/: classification_report.csv  incorrect_predictions.csv  misclassified_examples.md
results/20251113-225730/: incorrect_predictions.csv  misclassified_examples.md
results/20251113-225730/predictions/: predictions.csv
results/20251113-232212/: classification_report.csv  incorrect_predictions.csv  misclassified_examples.md
results/20251114-000642/: classification_report.csv  incorrect_predictions.csv  misclassified_examples.md
results/20251114-003524/: classification_report.csv  incorrect_predictions.csv  misclassified_examples.md
results/20260112-160710/: classification_report.csv  incorrect_predictions.csv  misclassified_examples.md
results/20260112-160710/predictions/: predictions.csv
results/99999999-best/: classification_report.csv  misclassified_examples.md
results/99999999-best/alerts/: alert_status.json  flagged_windows.csv  recent_window.csv  summary.md
results/99999999-best/analysis/: class_distribution.csv  confidence_summary.csv  most_uncertain_predictions.csv  representative_examples.md  text_length_stats.csv
scripts/: 01_prepare_data.py  02_train_model.py  03_evaluate_model.py  04_predict.py  05_analyze_predictions.py  06_flag_negative_comments.py  run_pipeline.py
src/: __init__.py  data_utils.py  model.py  predict.py  train.py  utils.py
